# rag-eval-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml  streamlit_app.py
data/sample_docs/: chunking_strategies.txt  evaluation_metrics.txt  llm_hallucination.txt  vector_databases.txt  what_is_rag.txt
examples/: demo.py
src/retrieval/: __init__.py  phase1_bruteforce.py  phase2_hybrid.py  phase3_production.py
tests/: test_retrieval.py
