[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-eval-toolkit"
version = "0.1.0"
description = "Production RAG patterns from scratch — hybrid retrieval, evaluation, and context engineering"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Idriss Animashaun"},
]
keywords = ["rag", "retrieval", "llm", "evaluation", "context-engineering"]

dependencies = [
    "sentence-transformers>=2.2.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
ui = [
    "streamlit>=1.30.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py310"
line-length = 100
